==> fjrodl/arduino_zero_2_hero/9_TestsUnitarios/1_Blink/test/test_blink/test_main.cpp <==
#include <Arduino.h>
#include <unity.h>

// Abrir un terminal y lanzar el comando
// pio test
// //////////////////////////////////

// // // //// // // //
// Zona de inicio de tests
// // // //// // // //

void setUp(void)
{
  // set stuff up here
}

void tearDown(void)
{
  // clean stuff up here
}

void test_led_builtin_pin_number(void)
{
  TEST_ASSERT_EQUAL(13, LED_BUILTIN);
}

void test_led_state_high(void)
{
  digitalWrite(LED_BUILTIN, HIGH);
  TEST_ASSERT_EQUAL(HIGH, digitalRead(LED_BUILTIN));
}

void test_led_state_low(void)
{
  digitalWrite(LED_BUILTIN, LOW);
  TEST_ASSERT_EQUAL(HIGH, digitalRead(LED_BUILTIN));
}

int runSingleUnityTests(void) {
  UNITY_BEGIN(); //Inicio de los tests
  RUN_TEST(test_led_builtin_pin_number);
  
  //return UNITY_END(); //Cuidado siempre de cerrar los tests
  return 0;
}

void runMultipleUnityTests(void) {
  UNITY_BEGIN();
}
// // // //// // // //
// Zona de fin de tests
// // // //// // // //


uint8_t i = 0;
uint8_t MAX_BLINKS = 5;


void setup()
{
  // NOTE!!! Wait for >2 secs
  // if board doesn't support software reset via Serial.DTR/RTS
  delay(2000);

  pinMode(LED_BUILTIN, OUTPUT);
  runSingleUnityTests();
  runMultipleUnityTests();
}


void loop()
{
 
  if (i < MAX_BLINKS)
  {
    RUN_TEST(test_led_state_high);
    delay(500);
    RUN_TEST(test_led_state_low);
    delay(500);
    i++;
  }
  else if (i == MAX_BLINKS)
  {
    UNITY_END(); // stop unit testing
  }
}
